# TcCppLib

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: coverage.yml
Include/CCD/: ccdc.hpp  include.hpp  mpr.h  polytope.hpp  quat.hpp  vec3.hpp
Include/CHEN/: calc.hpp  robotics.hpp
Include/NCCD/: algorithm.hpp  ccd.hpp  polytope.hpp  quat.hpp  simplex.hpp  support.hpp  vec.hpp
Include/PPX/: linalg.hpp
Include_temp/CCD/: list.hpp
Include_temp/NCCD/: vec.hpp
Include_temp/PPX/: exprtmpl.hpp  matrixs.hpp
Include_temp/TcEigen/: Core
demo/: CMakeLists.txt  main.cpp
include/CCD/: basic.hpp  ccd.hpp  simplex.hpp  support.hpp
include/CHEN/: ODEsolver.hpp  calc.hpp  control.hpp  filter.hpp  statespace.hpp
include/Eigen/: Dense  TcCore
include/MR/: mr.hpp
include/NCCD/: vec.hpp
include/PPX/: exprtmpl.hpp  liegroup.hpp  linalg.hpp  matrixs.hpp  optimization.hpp  ppx.h  robotics.hpp  signals.hpp  statistics.hpp
include/TcEigen/: Core  MatrixFunctions
include/TcEigen/src/Core/arch/Default/: GenericPacketMathFunctions.h
include/TcEigen/src/Core/util/: Macros.h
src/: division.cpp
src/ccd/: CMakeLists.txt  main.cpp
src/ccd/ccd/: config.h
test/: LTI_test.cpp  PPX_test.cpp
